recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:5: error: not found: type i
		if(v == List[i])
                             ^