recursion.cons.lessons.recursion.cons.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
	var existe:Boolean = false
	for(i <- 0 to l.length-1)
	{
		if(v == List[i])
		{
			existe = true
		}
	}
	return existe
}
